[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Rights/RightMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/AutocratTheme.tres" type="Theme" id=2]

[node name="RightMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1033.0
margin_bottom = 609.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 233.0
margin_top = 108.0
margin_right = 774.0
margin_bottom = 459.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroLabel" type="Label" parent="."]
margin_left = 244.0
margin_top = 61.0
margin_right = 769.0
margin_bottom = 97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowManyLeftLabel" type="Label" parent="."]
margin_left = 241.0
margin_top = 482.0
margin_right = 398.0
margin_bottom = 574.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 638.0
margin_top = 482.0
margin_right = 790.0
margin_bottom = 569.0
theme = ExtResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 461.773
margin_top = 484.49
margin_right = 615.773
margin_bottom = 571.49
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoteLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = 112.0
margin_right = 213.0
margin_bottom = 198.0
text = "NOTE: if none are selected when the Next button is pressed it will default to the lowest(most negative) option"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
